SERVER-47369 doReplSetReconfig should fail during primary drain mode